# simple_art_gan

./: .gitignore  README.md  pyproject.toml
simple_art_gan/: gan.ipynb
