[tool.poetry]
name = "simple_art_gan"
version = "0.1.0"
description = ""
authors = ["Shashank Pathipati <pshashank569@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "<2"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"
torch = { version = "^2.3.1+cu121", source = "torch-gpu-src" }
torchvision = { version = "^0.18.1+cu121", source = "torch-gpu-src" }


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "torch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
